# my-blog-backend

./: .env.example  .gitignore  docker-compose.yml  main.py  pyproject.toml
api/v1/: __init__.py
api/v1/auth/: __init__.py  auth.py
api/v1/monitoring/: __init__.py  health.py
api/v1/users/: __init__.py  users.py
app/controllers/: __init__.py  auth.py  user.py
app/models/: __init__.py  user.py
app/repositories/: user.py
app/schemas/extras/: token.py
app/schemas/requests/: auth.py
app/schemas/responses/: auth.py  users.py
core/: config.py  server.py
core/controller/: base.py
core/database/: __init__.py  session.py  standalone_session.py
core/fastapi/dependencies/: __init__.py  current_user.py  permission.py
core/fastapi/middlewares/: __init__.py  authentication.py  response_logger.py
core/repository/: base.py
core/security/: __init__.py  jwt.py
migrations/: env.py
migrations/versions/: 9f032000ff1d_initial_migration_01.py  f53da4f33053_initial_migration.py
